--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,8 @@
             <h2 id="modalTitle">New Event</h2>
 
             <input id="eventTitleInput" placeholder="Event Title" />
+            <input id="startTimeInput" placeholder="Start Time" /> - <input id="endTimeInput" placeholder="End Time" />
+            <br>
 
             <button id="saveButton">Save</button>
             <button id="deleteButton">Delete</button>
