--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
 
             <input id="eventTitleInput" placeholder="Event Title" />
             <input id="startTimeInput" placeholder="Start Time" /> - <input id="endTimeInput" placeholder="End Time" />
+            <label for="colorInput"></label>
+            <input id="colorInput" type="color" value="#58bae4">
             <br>
 
             <button id="saveButton">Save</button>
