--- a/public/schedular.html
+++ b/public/schedular.html
@@ -8,7 +8,7 @@
 <body style="background-color:#cecece">
  <h1>Select a Time Slot</h1>  
  
-
+<!--  useref  --> 
 
  <!-- We dont have an php file yet, but this is where the user input's will be sent and stored -->
  <form action="userInputs.php" method="POST">
