--- a/public/schedular.html
+++ b/public/schedular.html
@@ -11,7 +11,7 @@
 <!--  useref  --> 
 
  <!-- We dont have an php file yet, but this is where the user input's will be sent and stored -->
- <form action="userInputs.php" method="POST">
+ <form id="myForm">
 
     <label for="12am" class="left-align">12 AM </label>
     <input type="checkbox" id="12am" name="times[]" value="12am">  <br>
@@ -135,9 +135,33 @@
 
 
 
-    <input type="submit" name="submit" value="Submit">
+    <input type="submit" value="Submit">
   </form> 
   
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script>
+  $(document).ready(function() {
+    $('#myForm').submit(function(e) {
+      e.preventDefault();
+      $.ajax({
+        url: 'userInputs.php',
+        type: 'POST',
+        data: $(this).serialize(),
+        success: function(response) {
+          alert('Form submitted successfully!');
+          console.log(response);
+        },
+        error: function(xhr, status, error) {
+          alert('Error submitting form: ' + error);
+          console.log(xhr);
+        }
+      });
+    });
+  });
+  </script>
+
+
 
 
 
